# forje

./: Cargo.toml  LICENSE  README.md  Scope.md  rustfmt.toml
.github/workflows/: ci.yml
src/: main.rs
src/commands/: mod.rs  query.rs
src/services/: get_template_path.rs  mod.rs  render_template.rs  template_engine.rs
src/templates/query/: _macros.tera  base.template  base.tera
src/utils/: mod.rs  tera_filters.rs
